2008-09-26  Matthias Wimmer  <m@tthias.eu>

    * jabberd/jabberd.h: new: logging filters, fix: bouncing with sc-sessions
    * jabberd/lib/jabberdlib.h: same
    * jabberd/deliver.cc: same
    * jabberd/config.cc: logging filters

2008-09-08  Matthias Wimmer  <m@tthias.eu>

    * jabberd/xdb.cc: fix problem with fixed puffer for printing integer
    	(problem reported by Vince Negri)

2008-09-07  Matthias Wimmer  <m@tthias.eu>

    * bootstrap: update for newer build tools
    * jabberd/jabberd.h: fix for dynamic routing extension
    * jabberd/base/base_connect.cc: same
    * jabberd/base/base_accept.cc: same
    * jabberd/deliver.cc: same

2008-05-05  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.cc: patch by Martin Matuschka to support newer GnuTLS

2007-11-20  Matthias Wimmer  <m@tthias.eu>

    * jabberd/jabberd.h: dynamically update the routing across instances
    * jabberd/base/base_connect.cc: same
    * jabberd/base/base_accept.cc: same
    * jabberd/deliver.cc: same

2007-11-19  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/jabberdlib.h: new namespace declaration NS_COMMAND
    * jabberd/deliver.cc: freeing all @-internal packets
    * jsm/jsm.h: adding/removing hostname dynamically to the session manager
    * jsm/modules/mod_disco.cc: same
    * jsm/modules/mod_browse.cc: same
    * jsm/modules/mod_dynamic.cc: same
    * jsm/jsm.cc: same

2007-08-01  Matthias Wimmer  <m@tthias.eu>

    * jabberd/base/base_accept.cc: renaming queue to jqueue, solving name
	clash on Solaris

2007-07-22  Matthias Wimmer  <m@tthias.eu>

    * xdb_file/xdbfiletool.cc: another const fix proposed by Martin Matuska

2007-07-20  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/jutil.cc: fix for the case that tv.tv_sec is not defined as
	time_t - seems to be the case on FreeBSD up to version 6.2
    * jabberd/jabberd.h: checking the const declarations for logging again
    * jabberd/log.cc: same


2007-07-17  Matthias Wimmer  <m@tthias.eu>
