@@ -195,8 +195,8 @@ typedef result (*beathandler)(void *arg);
 
 /*** public functions for base modules ***/
 void register_config(pool p, const char *node, cfhandler f, void *arg); /* register a function to handle that node in the config file */
-void register_instance(instance i, char *host); /* associate an id with a hostname for that packet type */
-void unregister_instance(instance i, char *host); /* disassociate an id with a hostname for that packet type */
+void register_instance(instance i, char const* host); /* associate an id with a hostname for that packet type */
+void unregister_instance(instance i, char const* host); /* disassociate an id with a hostname for that packet type */
 void register_routing_update_callback(instance i, register_notify f, void *arg); /**< register a function that gets called on registering/unregistering a host for an instance */
 void register_phandler(instance id, order o, phandler f, void *arg); /* register a function to handle delivery for this instance */
 void register_beat(int freq, beathandler f, void *arg); /* register the function to be called from the heartbeat, freq is how often, <= 0 is ignored */
@@ -267,9 +267,9 @@ typedef struct xdbcache_struct {
     int id;
     const char *ns;
     int set; /**< flag that this is a set */
-    char *act; /**< for set */
-    char *match; /**< for set */
-    char *matchpath; /**< for set, namespace aware version of match */
+    char const* act; /**< for set */
+    char const* match; /**< for set */
+    char const* matchpath; /**< for set, namespace aware version of match */
     xht namespaces; /**< for set, namespace prefix declarations for matchpath */
     xmlnode data; /**< for set */
     jid owner;
@@ -283,8 +283,8 @@ typedef struct xdbcache_struct {
 
 xdbcache xdb_cache(instance i); /**< create a new xdb cache for this instance */
 xmlnode xdb_get(xdbcache xc,  jid owner, const char *ns); /**< blocks until namespace is retrieved, returns xmlnode or NULL if failed */
-int xdb_act(xdbcache xc, jid owner, const char *ns, char *act, char *match, xmlnode data); /**< sends new xml action, returns non-zero if failure */
-int xdb_act_path(xdbcache xc, jid owner, const char *ns, char *act, char *matchpath, xht namespaces, xmlnode data); /**< sends new xml action, returns non-zero if failure */
+int xdb_act(xdbcache xc, jid owner, const char *ns, char const* act, char const* match, xmlnode data); /**< sends new xml action, returns non-zero if failure */
+int xdb_act_path(xdbcache xc, jid owner, const char *ns, char const* act, char const* matchpath, xht namespaces, xmlnode data); /**< sends new xml action, returns non-zero if failure */
 int xdb_set(xdbcache xc, jid owner, const char *ns, xmlnode data); /**< sends new xml to replace old, returns non-zero if failure */
 
 /* Error messages */
